--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ html {
 
 body{
   background-image: url("hikesd.jpg");
-  background-size: 1500px;
+  background-size: 1500px 1000px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -13,12 +13,16 @@ body{
 @media only screen and (min-height: 1000px) {
   body {
     background-size: 1200px 1366px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
 
 @media only screen and (max-width: 420px) {
   body {
     background-size: 900px 825px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
 
