--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ body{
   background-size: 1500px 1200px;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-color: gray;
+  background-color: rgb(0, 77, 65);
 }
 
 @media only screen and (min-height: 1000px) {
